# mystique-self-injection

./: CMakeLists.txt  README.md
include/: mystique.h  syscall.h
src/: main.cpp  mystique.cpp  rwxsection.asm  syscall.cpp
